<resources>
    <string name="app_name">蓝牙测试Demo</string>
    <string name="qrcode_error">二维码数据错误!</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="connect">手动连接蓝牙</string>
    <string name="autoconnect">自动连接蓝牙</string>
    <string name="disconnect">断开连接</string>
    <string name="config_connect_count">0</string>
    <string name="clearCoinCount">清除计数</string>
    <string name="clearConfig">清除配置</string>
    <string name="coin">手动蓝牙投币</string>
    <string name="clear_cache_coin">清除手机投币次数</string>
    <string name="clearCoinAndChaceCount">清除设备和手机计数</string>
    <string name="connected">蓝牙连接成功</string>
    <string name="failure">连接失败</string>
    <string name="onError">蓝牙连接错误</string>
    <string name="onBLeConnect">蓝牙连接中....</string>
</resources>
